Fix scroll issue on mobile chrome

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   top: 0;
   left: 0;
   width: 100%;
+  width: 100svw;
   height: 100%;
+  height: 100svh;
 }
 
 .label {
